--- a/homework_5_bsa2018.BLL/homework_5_bsa2018.BLL.csproj
+++ b/homework_5_bsa2018.BLL/homework_5_bsa2018.BLL.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\homework_5_bsa2018.Shared\homework_5_bsa2018.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\10.0.1\lib\netstandard1.3\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
